2008-12-09  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Make XRender patch wildcard work where
	srcdir != builddir.
	* configure.ac:
	Capitalise 'XRender' in configure option.

2008-12-09  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Don't use find to locate the hotspot directory,
	explicitly use 'hotspot-' plus the changeset.

2008-12-09  Gary Benson  <gbenson@redhat.com>

	* contrib/jck/compile-native-code.sh: Fix library paths.

2008-12-08  Gary Benson  <gbenson@redhat.com>

	* contrib/jck/compile-native-code.sh: New file.

2008-12-07  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-uname.patch: Update for PARISC.

2008-12-05  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-hotspot7-build-fixes.patch: Update.
	* patches/hotspot/original/icedtea-core-zero-build.patch: Regenerate
	from original/icedtea-core-build.patch.
	* patches/icedtea-hotspot-6b14-7b24.patch: Newly generated.
	* patches/icedtea-hotspot-6b12-7b24.patch: Remove.
	* Makefile.am (ICEDTEA_PATCHES): Update for zero, based on original
	hotspot.

2008-12-05  Lillian Angel  <langel@redhat.com>

	* Makefile.am:
	(EXTRA_DIST): Added everything under patches/.

2008-12-05  Lillian Angel  <langel@redhat.com>

	* Makefile.am:
	(EXTRA_DIST): Added autogen.sh

2008-12-05  Lillian Angel  <langel@redhat.com>

	* Makefile.am:
	(EXTRA_DIST): Added hotspot.map.

2008-12-05  Mark Wielaard  <mwielaard@redhat.com>

	* rt/net/sourceforge/jnlp/runtime/JNLPClassLoader.java:
	JarIndex.getIndex() can return null when there is no index for the
	jar. In that case we shouldn't store the null result.

2008-12-05  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-lucene-crash.patch: Update for b14.
	* patches/hotspot/original/icedtea-memory-limits.patch: Likewise.
	* patches/hotspot/original/icedtea-core-build.patch: Likewise.
	* patches/hotspot/original/icedtea-static-libstdc++.patch: Likewise.
	* patches/hotspot/original/icedtea-zero-build.patch: Likewise.