@@ -314,6 +314,7 @@ AC_CHECK_WITH_CACAO_SRC_ZIP
 ENABLE_OPTIMIZATIONS
 ENABLE_ZERO_BUILD
 SET_CORE_OR_SHARK_BUILD
+ENABLE_HG
 
 if test "x${enable_pulse_java}" = "xyes"
 then
